docs/apache-airflow-providers-google/6.3.0/_sources/_api/airflow/providers/google/cloud/sensors/dataproc/index.rst.txt
:py:mod:`airflow.providers.google.cloud.sensors.dataproc`
=========================================================

.. py:module:: airflow.providers.google.cloud.sensors.dataproc

.. autoapi-nested-parse::

   This module contains a Dataproc Job sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.sensors.dataproc.DataprocJobSensor




.. py:class:: DataprocJobSensor(*, project_id: str, dataproc_job_id: str, region: Optional[str] = None, location: Optional[str] = None, gcp_conn_id: str = 'google_cloud_default', wait_timeout: Optional[int] = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Check for the state of a previously submitted Dataproc job.

   :param project_id: The ID of the google cloud project in which
       to create the cluster. (templated)
   :type project_id: str
   :param dataproc_job_id: The Dataproc job ID to poll. (templated)
   :type dataproc_job_id: str
   :param region: Required. The Cloud Dataproc region in which to handle the request. (templated)
   :type region: str
   :param location: (To be deprecated). The Cloud Dataproc region in which to handle the request. (templated)
   :type location: str
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud Platform.
   :type gcp_conn_id: str
   :param wait_timeout: How many seconds wait for job to be ready.
   :type wait_timeout: int

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['project_id', 'region', 'dataproc_job_id']

      

   .. py:attribute:: ui_color
      :annotation: = #f0eee4

      

   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.


   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



